Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115156

Last character missing with JAWS

XMLWordPrintable

    • Windows
    • bc8141d28 (dev), 3bdf03345 (6.6), f30409cb8 (tqtc/lts-6.5), 58b0a97c4 (tqtc/lts-6.2)

      Last character is not visible to JAWS in TextEdit. Attached example should reproduce this.

        1. qtbug115156.zip
          2 kB
          Joni Poikelin
        For Gerrit Dashboard: QTBUG-115156
        # Subject Branch Project Status CR V

            smd Jan Arve
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: